AutolevParser.py
# Generated from Autolev.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class AutolevParser ( Parser ):

    grammarFileName = "Autolev.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'+='", "'-='", "':='", "'*='", 
                     "'['", "','", "']'", "'/='", "'^='", "'''", "'('", 
                     "')'", "'{'", "':'", "'}'", "'+'", "'-'", "';'", "'.'", 
                     "'>'", "'0>'", "'1>>'", "'^'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "Mass", "Inertia", 
                      "Input", "Output", "Save", "UnitSystem", "Encode", 
                      "Newtonian", "Frames", "Bodies", "Particles", "Points", 
                      "Constants", "Specified", "Specifieds", "Imaginary", 
                      "Variables", "MotionVariables", "INT", "FLOAT", "EXP", 
                      "LINE_COMMENT", "ID", "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_assignment = 2
    RULE_functionCall = 3
    RULE_varDecl = 4
    RULE_varType = 5
    RULE_varDecl2 = 6
    RULE_ranges = 7
    RULE_massDecl = 8
    RULE_massDecl2 = 9
    RULE_inertiaDecl = 10
    RULE_matrix = 11
    RULE_matrixInOutput = 12
    RULE_codeCommands = 13
    RULE_settings = 14
    RULE_units = 15
    RULE_inputs = 16
    RULE_inputs2 = 17
    RULE_outputs = 18
    RULE_outputs2 = 19
    RULE_codegen = 20
    RULE_commands = 21
    RULE_vec = 22
    RULE_expr = 23

    ruleNames =  [ "prog", "stat", "assignment", "functionCall", "varDecl", 
                   "varType", "varDecl2", "ranges", "massDecl", "massDecl2", 
                   "inertiaDecl", "matrix", "matrixInOutput", "codeCommands", 
                   "settings", "units", "inputs", "inputs2", "outputs", 
                   "outputs2", "codegen", "commands", "vec", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    Mass=27
    Inertia=28
    Input=29
    Output=30
    Save=31
    UnitSystem=32
    Encode=33
    Newtonian=34
    Frames=35
    Bodies=36
    Particles=37
    Points=38
    Constants=39
    Specified=40
    Specifieds=41
    Imaginary=42
    Variables=43
    MotionVariables=44
    INT=45
    FLOAT=46
    EXP=47
    LINE_COMMENT=48
    ID=49
    WS=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AutolevParser.StatContext)
            else:
                return self.getTypedRuleContext(AutolevParser.StatContext,i)


        def getRuleIndex(self):
            return AutolevParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = AutolevParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 48
                self.stat()
                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AutolevParser.T__21) | (1 << AutolevParser.T__22) | (1 << AutolevParser.Mass) | (1 << AutolevParser.Inertia) | (1 << AutolevParser.Input) | (1 << AutolevParser.Output) | (1 << AutolevParser.Save) | (1 << AutolevParser.UnitSystem) | (1 << AutolevParser.Encode) | (1 << AutolevParser.Newtonian) | (1 << AutolevParser.Frames) | (1 << AutolevParser.Bodies) | (1 << AutolevParser.Particles) | (1 << AutolevParser.Points) | (1 << AutolevParser.Constants) | (1 << AutolevParser.Specified) | (1 << AutolevParser.Specifieds) | (1 << AutolevParser.Imaginary) | (1 << AutolevParser.Variables) | (1 << AutolevParser.MotionVariables) | (1 << AutolevParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(AutolevParser.VarDeclContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(AutolevParser.FunctionCallContext,0)


        def codeCommands(self):
            return self.getTypedRuleContext(AutolevParser.CodeCommandsContext,0)


        def massDecl(self):
            return self.getTypedRuleContext(AutolevParser.MassDeclContext,0)


        def inertiaDecl(self):
            return self.getTypedRuleContext(AutolevParser.InertiaDeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(AutolevParser.AssignmentContext,0)


        def settings(self):
            return self.getTypedRuleContext(AutolevParser.SettingsContext,0)


        def getRuleIndex(self):
            return AutolevParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)




    def stat(self):

        localctx = AutolevParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.functionCall()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 55
                self.codeCommands()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 56
                self.massDecl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 57
                self.inertiaDecl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 58
                self.assignment()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 59
                self.settings()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vec(self):
            return self.getTypedRuleContext(AutolevParser.VecContext,0)


        def expr(self):
            return self.getTypedRuleContext(AutolevParser.ExprContext,0)


        def ID(self):
            return self.getToken(AutolevParser.ID, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(AutolevParser.INT)
            else:
                return self.getToken(AutolevParser.INT, i)

        def getRuleIndex(self):
            return AutolevParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = AutolevParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.vec()
                self.state = 63
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AutolevParser.T__0) | (1 << AutolevParser.T__1) | (1 << AutolevParser.T__2) | (1 << AutolevParser.T__3) | (1 << AutolevParser.T__4))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 64
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.match(AutolevParser.ID)
                self.state = 67
                self.match(AutolevParser.T__5)
                self.state = 68
                self.match(AutolevParser.INT)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AutolevParser.T__6:
                    self.state = 69
                    self.match(AutolevParser.T__6)
                    self.state = 70
                    self.match(AutolevParser.INT)
                    self.state = 75
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 76
                self.match(AutolevParser.T__7)
                self.state = 77
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AutolevParser.T__0) | (1 << AutolevParser.T__1) | (1 << AutolevParser.T__2) | (1 << AutolevParser.T__3) | (1 << AutolevParser.T__4) | (1 << AutolevParser.T__8) | (1 << AutolevParser.T__9))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 78
                self.expr(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.match(AutolevParser.ID)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AutolevParser.T__10:
                    self.state = 80
                    self.match(AutolevParser.T__10)
                    self.state = 85
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 86
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AutolevParser.T__0) | (1 << AutolevParser.T__1) | (1 << AutolevParser.T__2) | (1 << AutolevParser.T__3) | (1 << AutolevParser.T__4) | (1 << AutolevParser.T__8) | (1 << AutolevParser.T__9))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 87
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionCallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(AutolevParser.ID)
            else:
                return self.getToken(AutolevParser.ID, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AutolevParser.ExprContext)
            else:
                return self.getTypedRuleContext(AutolevParser.ExprContext,i)


        def Mass(self):
            return self.getToken(AutolevParser.Mass, 0)

        def Inertia(self):
            return self.getToken(AutolevParser.Inertia, 0)

        def getRuleIndex(self):
            return AutolevParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)




    def functionCall(self):

        localctx = AutolevParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AutolevParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(AutolevParser.ID)
                self.state = 91
                self.match(AutolevParser.T__11)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AutolevParser.T__5) | (1 << AutolevParser.T__11) | (1 << AutolevParser.T__13) | (1 << AutolevParser.T__17) | (1 << AutolevParser.T__21) | (1 << AutolevParser.T__22) | (1 << AutolevParser.Mass) | (1 << AutolevParser.Inertia) | (1 << AutolevParser.INT) | (1 << AutolevParser.FLOAT) | (1 << AutolevParser.EXP) | (1 << AutolevParser.ID))) != 0):
                    self.state = 92
                    self.expr(0)
                    self.state = 97
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==AutolevParser.T__6:
                        self.state = 93
                        self.match(AutolevParser.T__6)
                        self.state = 94
                        self.expr(0)
                        self.state = 99
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 102
                self.match(AutolevParser.T__12)
                pass
            elif token in [AutolevParser.Mass, AutolevParser.Inertia]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                _la = self._input.LA(1)
                if not(_la==AutolevParser.Mass or _la==AutolevParser.Inertia):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 104
                self.match(AutolevParser.T__11)
                self.state = 105
                self.match(AutolevParser.ID)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AutolevParser.T__6:
                    self.state = 106
                    self.match(AutolevParser.T__6)
                    self.state = 107
                    self.match(AutolevParser.ID)
                    self.state = 112
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 113
                self.match(AutolevParser.T__12)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(AutolevParser.VarTypeContext,0)


        def varDecl2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AutolevParser.VarDecl2Context)
            else:
                return self.getTypedRuleContext(AutolevParser.VarDecl2Context,i)


        def getRuleIndex(self):
            return AutolevParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)




    def varDecl(self):

        localctx = AutolevParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.varType()
            self.state = 117
            self.varDecl2()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AutolevParser.T__6:
                self.state = 118
                self.match(AutolevParser.T__6)
                self.state = 119
                self.varDecl2()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Newtonian(self):
            return self.getToken(AutolevParser.Newtonian, 0)

        def Frames(self):
            return self.getToken(AutolevParser.Frames, 0)

        def Bodies(self):
            return self.getToken(AutolevParser.Bodies, 0)

        def Particles(self):
            return self.getToken(AutolevParser.Particles, 0)

        def Points(self):
            return self.getToken(AutolevParser.Points, 0)

        def Constants(self):
            return self.getToken(AutolevParser.Constants, 0)

        def Specified(self):
            return self.getToken(AutolevParser.Specified, 0)

        def Specifieds(self):
            return self.getToken(AutolevParser.Specifieds, 0)

        def Imaginary(self):
            return self.getToken(AutolevParser.Imaginary, 0)

        def Variables(self):
            return self.getToken(AutolevParser.Variables, 0)

        def MotionVariables(self):
            return self.getToken(AutolevParser.MotionVariables, 0)

        def getRuleIndex(self):
            return AutolevParser.RULE_varType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType" ):
                listener.enterVarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType" ):
                listener.exitVarType(self)




    def varType(self):

        localctx = AutolevParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varType)
        self._la = 0 # Token type
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AutolevParser.Newtonian]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.match(AutolevParser.Newtonian)
                pass
            elif token in [AutolevParser.Frames]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(AutolevParser.Frames)
                pass
            elif token in [AutolevParser.Bodies]:
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.match(AutolevParser.Bodies)
                pass
            elif token in [AutolevParser.Particles]:
                self.enterOuterAlt(localctx, 4)
                self.state = 128
                self.match(AutolevParser.Particles)
                pass
            elif token in [AutolevParser.Points]:
                self.enterOuterAlt(localctx, 5)
                self.state = 129
                self.match(AutolevParser.Points)
                pass
            elif token in [AutolevParser.Constants]:
                self.enterOuterAlt(localctx, 6)
                self.state = 130
                self.match(AutolevParser.Constants)
                pass
            elif token in [AutolevParser.Specified]:
                self.enterOuterAlt(localctx, 7)
                self.state = 131
                self.match(AutolevParser.Specified)
                pass
            elif token in [AutolevParser.Specifieds]:
                self.enterOuterAlt(localctx, 8)
                self.state = 132
                self.match(AutolevParser.Specifieds)
                pass
            elif token in [AutolevParser.Imaginary]:
                self.enterOuterAlt(localctx, 9)
                self.state = 133
                self.match(AutolevParser.Imaginary)
                pass
            elif token in [AutolevParser.Variables]:
                self.enterOuterAlt(localctx, 10)
                self.state = 134
                self.match(AutolevParser.Variables)
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AutolevParser.T__10:
                    self.state = 135
                    self.match(AutolevParser.T__10)
                    self.state = 140
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [AutolevParser.MotionVariables]:
                self.enterOuterAlt(localctx, 11)
                self.state = 141
                self.match(AutolevParser.MotionVariables)
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AutolevParser.T__10:
                    self.state = 142
                    self.match(AutolevParser.T__10)
                    self.state = 147
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDecl2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AutolevParser.ID, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(AutolevParser.INT)
            else:
                return self.getToken(AutolevParser.INT, i)

        def expr(self):
            return self.getTypedRuleContext(AutolevParser.ExprContext,0)


        def getRuleIndex(self):
            return AutolevParser.RULE_varDecl2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl2" ):
                listener.enterVarDecl2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl2" ):
                listener.exitVarDecl2(self)




    def varDecl2(self):

        localctx = AutolevParser.VarDecl2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varDecl2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(AutolevParser.ID)
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 151
                self.match(AutolevParser.T__13)
                self.state = 152
                self.match(AutolevParser.INT)
                self.state = 153
                self.match(AutolevParser.T__14)
                self.state = 154
                self.match(AutolevParser.INT)
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AutolevParser.T__6:
                    self.state = 155
                    self.match(AutolevParser.T__6)
                    self.state = 156
                    self.match(AutolevParser.INT)
                    self.state = 157
                    self.match(AutolevParser.T__14)
                    self.state = 158
                    self.match(AutolevParser.INT)
                    self.state = 163
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 164
                self.match(AutolevParser.T__15)


            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AutolevParser.T__13:
                self.state = 167
                self.match(AutolevParser.T__13)
                self.state = 168
                self.match(AutolevParser.INT)
                self.state = 169
                self.match(AutolevParser.T__15)


            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AutolevParser.T__16 or _la==AutolevParser.T__17:
                self.state = 172
                _la = self._input.LA(1)
                if not(_la==AutolevParser.T__16 or _la==AutolevParser.T__17):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AutolevParser.T__10:
                self.state = 175
                self.match(AutolevParser.T__10)
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AutolevParser.T__0:
                self.state = 181
                self.match(AutolevParser.T__0)
                self.state = 182
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RangesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(AutolevParser.INT)
            else:
                return self.getToken(AutolevParser.INT, i)

        def getRuleIndex(self):
            return AutolevParser.RULE_ranges

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRanges" ):
                listener.enterRanges(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRanges" ):
                listener.exitRanges(self)




    def ranges(self):

        localctx = AutolevParser.RangesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ranges)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.match(AutolevParser.T__13)
            self.state = 186
            self.match(AutolevParser.INT)
            self.state = 187
            self.match(AutolevParser.T__14)
            self.state = 188
            self.match(AutolevParser.INT)
            self.state = 195
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AutolevParser.T__6:
                self.state = 189
                self.match(AutolevParser.T__6)
                self.state = 190
                self.match(AutolevParser.INT)
                self.state = 191
                self.match(AutolevParser.T__14)
                self.state = 192
                self.match(AutolevParser.INT)
                self.state = 197
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 198
            self.match(AutolevParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MassDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Mass(self):
            return self.getToken(AutolevParser.Mass, 0)

        def massDecl2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AutolevParser.MassDecl2Context)
            else:
                return self.getTypedRuleContext(AutolevParser.MassDecl2Context,i)


        def getRuleIndex(self):
            return AutolevParser.RULE_massDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMassDecl" ):
                listener.enterMassDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMassDecl" ):
                listener.exitMassDecl(self)




    def massDecl(self):
